--- a/app/globals.css
+++ b/app/globals.css
@@ -136,3 +136,201 @@ body {
 .raise:focus {
   border-color: #6149ef;
 }
+
+/* register */
+
+.cont {
+  overflow: hidden;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background: #141520;
+}
+.form {
+  position: relative;
+  width: 60vw;
+  height: 100%;
+  transition: transform 1.2s ease-in-out;
+  padding: 50px 30px 0;
+}
+.sub-cont {
+  overflow: hidden;
+  position: absolute;
+  left: 60vw;
+  top: 0;
+  width: 40vw;
+  height: 100vh;
+  background: #141520;
+  transition: transform 1.2s ease-in-out;
+}
+.cont.s--signup .sub-cont {
+  transform: translate3d(-60vw, 0, 0);
+  -webkit-transform: translate3d(-60vw, 0, 0);
+  -moz-transform: translate3d(-60vw, 0, 0);
+  -ms-transform: translate3d(-60vw, 0, 0);
+  -o-transform: translate3d(-60vw, 0, 0);
+}
+
+.img {
+  overflow: hidden;
+  z-index: 2;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 40vw;
+  height: 100%;
+  padding-top: 360px;
+}
+.img:before {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100vw;
+  height: 100%;
+  background-image: url("../assets/images/galaxy-2.jpg");
+  background-size: cover;
+  transition: transform 1.2s ease-in-out;
+}
+.img:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+.cont.s--signup .img:before {
+  transform: translate3d(50vw, 0, 0);
+  -webkit-transform: translate3d(50vw, 0, 0);
+  -moz-transform: translate3d(50vw, 0, 0);
+  -ms-transform: translate3d(50vw, 0, 0);
+  -o-transform: translate3d(50vw, 0, 0);
+}
+.img__text {
+  z-index: 2;
+  position: absolute;
+  left: 0;
+  top: 50px;
+  width: 50vw;
+  padding: 0 20px;
+  text-align: center;
+  color: #fff;
+  transition: transform 1.2s ease-in-out;
+}
+.img__text h2 {
+  margin-bottom: 10px;
+  font-weight: normal;
+}
+.img__text p {
+  font-size: 14px;
+  line-height: 1.5;
+}
+.cont.s--signup .img__text.m--up {
+  transform: translateX(60vw);
+  -webkit-transform: translateX(60vw);
+  -moz-transform: translateX(60vw);
+  -ms-transform: translateX(60vw);
+  -o-transform: translateX(60vw);
+}
+.img__text.m--in {
+  transform: translateX(-60vw);
+  -webkit-transform: translateX(-60vw);
+  -moz-transform: translateX(-60vw);
+  -ms-transform: translateX(-60vw);
+  -o-transform: translateX(-60vw);
+}
+.cont.s--signup .img__text.m--in {
+  transform: translateX(0);
+}
+.img__btn {
+  overflow: hidden;
+  z-index: 2;
+  position: relative;
+  width: 100px;
+  height: 36px;
+  margin: 0 auto;
+  background: transparent;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 15px;
+  cursor: pointer;
+}
+.img__btn:after {
+  content: "";
+  z-index: 2;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #fff;
+  border-radius: 30px;
+}
+.img__btn span {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  transition: transform 1.2s;
+}
+.img__btn span.m--in {
+  transform: translateY(-72px);
+}
+.cont.s--signup .img__btn span.m--in {
+  transform: translateY(0);
+}
+.cont.s--signup .img__btn span.m--up {
+  transform: translateY(72px);
+}
+.sign-in {
+  transition-timing-function: ease-out;
+}
+.cont.s--signup .sign-in {
+  transition-timing-function: ease-in-out;
+  transition-duration: 1.2s;
+  transform: translate3d(40vw, 0, 0);
+  -webkit-transform: translate3d(40vw, 0, 0);
+  -moz-transform: translate3d(40vw, 0, 0);
+  -ms-transform: translate3d(40vw, 0, 0);
+  -o-transform: translate3d(40vw, 0, 0);
+}
+.sign-up {
+  transform: translate3d(60vw, 0, 0);
+  -webkit-transform: translate3d(60vw, 0, 0);
+  -moz-transform: translate3d(60vw, 0, 0);
+  -ms-transform: translate3d(60vw, 0, 0);
+  -o-transform: translate3d(60vw, 0, 0);
+}
+.cont.s--signup .sign-up {
+  transform: translate3d(40vw, 0, 0);
+  -webkit-transform: translate3d(40vw, 0, 0);
+  -moz-transform: translate3d(40vw, 0, 0);
+  -ms-transform: translate3d(40vw, 0, 0);
+  -o-transform: translate3d(40vw, 0, 0);
+}
+.icon-link {
+  position: absolute;
+  left: 5px;
+  bottom: 5px;
+  width: 32px;
+}
+.icon-link img {
+  width: 100%;
+  vertical-align: top;
+}
+.icon-link--twitter {
+  left: auto;
+  right: 5px;
+}
+.link-footer {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+}
