--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,7 @@ body {
 }
 
 .bg-darker-gray {
-  background: #1f1f26;
+  background: #141520;
 }
 
 .bg-light-white {
@@ -58,6 +58,10 @@ body {
   color: #6149ef;
 }
 
+.border-gray {
+  border: 1px solid #9798ad20;
+}
+
 .borderb-gray {
   border-bottom: 1px solid #9798ad20;
 }
@@ -83,7 +87,6 @@ body {
   background: #6149ef;
   border: none;
   z-index: 1;
-  border-radius: 0.375rem;
 }
 .btn-15:after {
   position: absolute;
@@ -94,8 +97,14 @@ body {
   right: 0;
   z-index: -1;
   background-color: #b621fe;
-  border-radius: 0.375rem;
+  /* border-radius: 0.375rem; */
   transition: all 0.3s ease;
+}
+.btn-15-round:after {
+  border-radius: 10px;
+}
+.btn-15-sm-round:after {
+  border-radius: 0.375rem;
 }
 .btn-15:hover {
   color: #fff;
@@ -139,26 +148,21 @@ body {
 
 /* register */
 
-.cont {
-  overflow: hidden;
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  background: #141520;
-}
 .form {
   position: relative;
-  width: 60vw;
+  width: 70vw;
   height: 100%;
   transition: transform 1.2s ease-in-out;
-  padding: 50px 30px 0;
+}
+.form.sign-up {
+  width: 50vw !important;
 }
 .sub-cont {
   overflow: hidden;
   position: absolute;
   left: 60vw;
   top: 0;
-  width: 40vw;
+  width: 100vw;
   height: 100vh;
   background: #141520;
   transition: transform 1.2s ease-in-out;
@@ -209,24 +213,10 @@ body {
   -o-transform: translate3d(50vw, 0, 0);
 }
 .img__text {
-  z-index: 2;
-  position: absolute;
-  left: 0;
-  top: 50px;
-  width: 50vw;
-  padding: 0 20px;
-  text-align: center;
-  color: #fff;
+  width: 40vw;
   transition: transform 1.2s ease-in-out;
 }
-.img__text h2 {
-  margin-bottom: 10px;
-  font-weight: normal;
-}
-.img__text p {
-  font-size: 14px;
-  line-height: 1.5;
-}
+
 .cont.s--signup .img__text.m--up {
   transform: translateX(60vw);
   -webkit-transform: translateX(60vw);
@@ -278,6 +268,7 @@ body {
   width: 100%;
   height: 100%;
   transition: transform 1.2s;
+  font-weight: 600;
 }
 .img__btn span.m--in {
   transform: translateY(-72px);
@@ -301,11 +292,11 @@ body {
   -o-transform: translate3d(40vw, 0, 0);
 }
 .sign-up {
-  transform: translate3d(60vw, 0, 0);
-  -webkit-transform: translate3d(60vw, 0, 0);
-  -moz-transform: translate3d(60vw, 0, 0);
-  -ms-transform: translate3d(60vw, 0, 0);
-  -o-transform: translate3d(60vw, 0, 0);
+  transform: translate3d(-60vw, 0, 0);
+  -webkit-transform: translate3d(-60vw, 0, 0);
+  -moz-transform: translate3d(-60vw, 0, 0);
+  -ms-transform: translate3d(-60vw, 0, 0);
+  -o-transform: translate3d(-60vw, 0, 0);
 }
 .cont.s--signup .sign-up {
   transform: translate3d(40vw, 0, 0);
@@ -313,24 +304,4 @@ body {
   -moz-transform: translate3d(40vw, 0, 0);
   -ms-transform: translate3d(40vw, 0, 0);
   -o-transform: translate3d(40vw, 0, 0);
-}
-.icon-link {
-  position: absolute;
-  left: 5px;
-  bottom: 5px;
-  width: 32px;
-}
-.icon-link img {
-  width: 100%;
-  vertical-align: top;
-}
-.icon-link--twitter {
-  left: auto;
-  right: 5px;
-}
-.link-footer {
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  transform: translateX(-50%);
 }
