--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,23 @@
     -ms-transform: rotate(90deg);
     -o-transform: rotate(90deg);
   }
+  .cont.s--signup .sub-cont {
+    transform: translate3d(-85vw, 0, 0) !important;
+    -webkit-transform: translate3d(-85vw, 0, 0) !important;
+    -moz-transform: translate3d(-85vw, 0, 0) !important;
+    -ms-transform: translate3d(-85vw, 0, 0) !important;
+    -o-transform: translate3d(-85vw, 0, 0) !important;
+  }
+  .cont.s--signup .sign-up {
+    transform: translate3d(30vw, 0, 0);
+    -webkit-transform: translate3d(30vw, 0, 0);
+    -moz-transform: translate3d(30vw, 0, 0);
+    -ms-transform: translate3d(30vw, 0, 0);
+    -o-transform: translate3d(30vw, 0, 0);
+  }
+  .form.sign-up {
+    width: 35vw !important;
+  }
 }
 
 body {
@@ -168,7 +185,7 @@ body {
   transition: transform 1.2s ease-in-out;
 }
 .form.sign-up {
-  width: 50vw !important;
+  width: 50vw;
 }
 .sub-cont {
   overflow: hidden;
