--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -2,10 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Alata&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&display=swap");
 
 body {
-  font-family: "Alata", sans-serif !important;
+  font-family: "Nunito", sans-serif !important;
   font-weight: 400;
   font-style: normal;
   background-repeat: no-repeat;
@@ -13,24 +14,18 @@ body {
   background-position: center;
   padding: 0;
   margin: 0;
-  background-color: #0a1223;
-  // overflow-y: hidden !important;
+  background-color: #091122;
 }
 
-// body:after {
-//   z-index: -1;
-//   content: "";
-//   position: absolute;
-//   left: 0;
-//   top: 0;
-//   width: 100vw;
-// }
-
 * {
-  font-family: "Alata", sans-serif !important;
+  font-family: "Nunito", sans-serif !important;
   font-weight: 400;
   font-style: normal;
   // cursor: none;
+}
+
+.kalinia-font {
+  font-family: "Kalnia Glaze", sans-serif !important;
 }
 
 @media screen and (max-width: 1710px) {
