--- a/components/post/like-button/like-button.css
+++ b/components/post/like-button/like-button.css
@@ -1,7 +1,8 @@
 .heart {
   width: 100px;
   height: 100px;
-  background: url("https://cssanimation.rocks/images/posts/steps/heart.png") no-repeat;
+  background: url("https://cssanimation.rocks/images/posts/steps/heart.png")
+    no-repeat;
   background-position: 0 0;
   cursor: pointer;
   transition: background-position 1s steps(28);
@@ -29,6 +30,13 @@
     position: absolute;
     bottom: -2.2rem;
     left: -1.6rem;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .stage {
+    bottom: -37px;
+    left: -30px;
   }
 }
 
